--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -10,22 +10,17 @@
                 <div
                     class="flex justify-evenly bg-white shadow-md px-6 pt-8 pb-8 rounded w-full max-w-lg gap-1"
                 >
-                    <a
-                        href="/cadastro/dentista"
-                        class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
-                    >
+                    <a href="/cadastro/dentista" class="primary-btn">
                         Cadastro de Dentista
                     </a>
 
-                    <a
-                        href="/listagem/usuario"
-                        class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
-                    >
+                    <a href="/listagem/usuario" class="primary-btn">
                         Listagem de Usuários
                     </a>
                 </div>
             </div>
         </div>
+
         <div class="bg-white mx-20 flex gap-8 items-start w-full"></div>
     </body>
 </html>
