--- a/src/main/resources/templates/agendamento.html
+++ b/src/main/resources/templates/agendamento.html
@@ -179,10 +179,7 @@
                     >
                         Cancelar
                     </a>
-                    <button
-                        class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="submit"
-                    >
+                    <button class="self-center mb-4 primary-btn" type="submit">
                         Cadastrar
                     </button>
                 </div>
