--- a/src/main/resources/templates/agendamentoDentista.html
+++ b/src/main/resources/templates/agendamentoDentista.html
@@ -116,7 +116,7 @@
                         name="observacoesDentista"
                     ></textarea>
                     <div
-                            th:replace="~{fragments :: listaErros('observacoesDentista')}"
+                        th:replace="~{fragments :: listaErros('observacoesDentista')}"
                     ></div>
                     <div class="mt-3 self-end">
                         <a
@@ -125,10 +125,7 @@
                         >
                             Cancelar
                         </a>
-                        <button
-                            type="submit"
-                            class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        >
+                        <button type="submit" class="mb-4 primary-btn">
                             Confirmar Agendamento
                         </button>
                     </div>
