--- a/src/main/resources/templates/cadastroDentista.html
+++ b/src/main/resources/templates/cadastroDentista.html
@@ -179,9 +179,9 @@
                         </div>
                     </div>
 
-                    <div class="flex justify-around mt-6 mb-4">
+                    <div class="self-end flex gap-2 mt-6 mb-4">
                         <a
-                            class="border border-blue-400 text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"
+                            class="border border-blue-400 text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded self-end shadow-sm hover:shadow"
                             href="/"
                         >
                             Voltar
@@ -189,7 +189,7 @@
 
                         <input
                             type="submit"
-                            class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"
+                            class="primary-btn self-end"
                             value="Cadastrar"
                         />
                     </div>
