--- a/src/main/resources/templates/cadastroPaciente.html
+++ b/src/main/resources/templates/cadastroPaciente.html
@@ -270,7 +270,7 @@
 
                     <input
                         type="submit"
-                        class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
+                        class="primary-btn self-center"
                         value="Cadastrar"
                     />
                 </form>
