--- a/src/main/resources/templates/consulta.html
+++ b/src/main/resources/templates/consulta.html
@@ -1,88 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-    <head th:replace="~{fragments :: header('Consulta')}"></head>
+    <head th:replace="~{fragments :: mainHeader('Consulta')}"></head>
 
     <body class="bg-sky-100">
         <div class="flex flex-col my-4 items-center">
             <form
-                class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md"
+                class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md gap-3"
                 th:action="@{/consulta/__${idConsulta}__}"
                 enctype="utf8"
                 method="POST"
                 th:object="${consultaDTO}"
             >
-                <h1 class="font-bold text-3xl text-center mt-3 text-gray-800">
+                <h1
+                    class="font-bold text-2xl text-center text-gray-700 uppercase tracking-wide mb-2"
+                >
                     Consulta
                 </h1>
 
-                <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
+                <h2 class="text-gray-600 font-bold uppercase mt-4 mb-1">
                     Informações do Agendamento
                 </h2>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Tipo de Agendamento:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${agendamento.getTipo().getDescricao()}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Dentista:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${agendamento.getDentista().getPessoa().getNome()}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Paciente:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${agendamento.getPaciente().getPessoa().getNome()}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Data da Consulta:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Hora da Consulta:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Observações do Paciente:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${agendamento.getObservacoesPaciente()}"
                     ></span>
                 </label>
 
-                <label class="text-gray-800 font-semibold">
+                <label class="label font-semibold">
                     Forma de Pagamento:
                     <span
-                        class="font-normal text-gray-400 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500"
                         th:text="${agendamento.getFormaPagamento().getDescricao()}"
                     ></span>
                 </label>
 
-                <label
-                    class="font-medium text-gray-700 block"
-                    for="inputDescricao"
-                >
+                <label class="label font-semibold mt-2" for="inputDescricao">
                     Descrição
                 </label>
                 <textarea
-                    class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4 resize-none"
+                    class="input resize-none"
                     rows="3"
                     id="inputDescricao"
                     name="descricao"
@@ -90,17 +89,14 @@
                     type="textarea"
                 ></textarea>
 
-                <div class="mt-3 self-end">
+                <div class="flex gap-4 self-end mt-4">
                     <a
-                        class="self-center mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        class="self-center border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded shadow-sm hover:shadow"
                         href="/"
                     >
                         Cancelar
                     </a>
-                    <button
-                        class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="submit"
-                    >
+                    <button class="primary-btn self-center" type="submit">
                         Cadastrar
                     </button>
                 </div>
