--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
                 <form
                     method="POST"
                     th:action="@{/login}"
-                    class="bg-white shadow-md px-8 pt-8 pb-9 rounded flex flex-col gap-1"
+                    class="bg-white shadow-md px-8 pt-10 pb-12 rounded flex flex-col gap-1"
                 >
                     <label class="label" for="cpf"> CPF </label>
                     <input
@@ -51,7 +51,7 @@
 
                         <input
                             type="submit"
-                            class="self-end mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                            class="primary-btn self-end"
                             value="Entrar"
                         />
                     </div>
