--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,6 +10,7 @@
         <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
         <title th:text="${titulo}"></title>
 
+        <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.png}">
         <link th:href="@{/css/tailwind.css}" rel="stylesheet" />
     </head>
 </div>
