--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,7 @@
 
     <body class="bg-sky-100">
         <div class="flex h-screen flex-col items-center justify-center">
-            <h1
-                class="font-bold text-3xl text-center mb-10 max-w-md text-slate-800"
-            >
-                Sistema Gerenciador de Consultório Odontológico
-            </h1>
+            <img class="mb-10 max-w-md" th:src="@{/images/logoSGCO.png}"/>
 
             <div class="w-full max-w-xs">
                 <form
